making script more generic

--- a/example/index.html
+++ b/example/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="http://example.com/css/styles.css">
 </head>
 <body>
     This is a test
-    <script src="js/scripts.js?a=b"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
